--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
     </div>
 </section>
         <main>
-            <section id='executive_summary'><h2>Executive Summary</h2><p>Content not available.</p></section>
+            <section id='executive_summary'>
+<h1>Executive Summary</h1>
+<h2>1. Executive Summary</h2>
+<p>India solidified its position as a global leader in grassroots cryptocurrency adoption in 2024, ranking first worldwide according to Chainalysis's Global Crypto Adoption Index for the second consecutive year. This highlights significant engagement, particularly through centralized services and growing DeFi activity, despite a complex regulatory landscape. The market, valued at approximately $2.5 billion in 2024, saw substantial trading volume growth, driven notably by retail investors in non-metropolitan areas seeking alternative investment avenues and income supplementation. Projections suggest considerable future expansion, potentially exceeding $15 billion by 2035.</p>
+<p>The regulatory environment remains a defining characteristic, operating in a "grey area" where Virtual Digital Assets (VDAs) are taxed heavily (30% on gains, 1% TDS) but lack full legal recognition or status as payment instruments. While the Reserve Bank of India (RBI) maintains a cautious stance citing financial stability concerns, the government is reportedly re-evaluating its position in light of global trends. Stringent Anti-Money Laundering (AML) and Know Your Customer (KYC) regulations under the Prevention of Money Laundering Act (PMLA) are actively enforced.</p>
+<p>Key drivers fueling India's crypto market include its large, young, and tech-savvy population, the perception of crypto as a long-term investment and potential inflation hedge, the accessibility of trading platforms compared to traditional markets, and the potential for cheaper remittances. However, significant challenges persist, primarily stemming from the ongoing regulatory uncertainty and the impact of the stringent tax regime, alongside prevalent security risks such as scams and fraud. The future outlook points towards increased regulatory clarity, potentially balancing innovation with robust investor protection and financial stability measures, heavily influenced by global regulatory developments.</p>
+</section>
 
 <section id='market_overview'>
 <h1>Market Overview</h1>
